--- a/frontend/views/layouts/main.handlebars
+++ b/frontend/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
         |
         <a target="_blank" rel="noopener noreferrer" href="https://github.com/janisnjohn/spaceInvaders">Original Repo</a>
         |
-        <a href="/api/leaderboard">Player Score API</a>
+        <a target="_blank" rel="noopener noreferrer" href="{{backendURL}}/api/leaderboard">Player Score API</a>
         |
         <a href="/leaderboard">Leaderboard</a>
         |
