--- a/frontend/views/leaderboard.handlebars
+++ b/frontend/views/leaderboard.handlebars
@@ -19,8 +19,8 @@
 
               {{#each Record}}
                 <tr>
-                    <td>{{this.dataValues.user_name}}</td>
-                    <td>{{this.dataValues.score}}</td>
+                    <td>{{this.user_name}}</td>
+                    <td>{{this.score}}</td>
                 </tr>
                 {{/each}}
 
