--- a/frontend/views/index.handlebars
+++ b/frontend/views/index.handlebars
@@ -4,7 +4,7 @@
   <br>
   <center>
     <header id="showcase">
-      <h1 class="white-text font-weight light italic">Invaders Must Die!!!!!</h1>
+      <h1 class="white-text font-weight light italic">PEACE LOVE AND PLANTS</h1>
     </header>
     <br>
     <br>
